Added more logging at bootstrap + configured to watch over log4j files